[project]
name = "thread"
description = "A ComfyUI custom node package for seamless integration with Threads (Meta's social platform). This package allows you to publish posts, manage images, and retrieve post history directly from your ComfyUI workflows."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["threads_sdk"]

[project.urls]
Repository = "https://github.com/dseditor/ComfyUI-Thread"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "dseditor"
DisplayName = "ComfyUI-Thread"
Icon = ""
includes = []
